--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="TrisTris – estensione di Tris come PWA" />
+  <meta name="description" content="TrisTris" />
   <title>TrisTris</title>
 
   <link rel="manifest" href="manifest.webmanifest" />
@@ -35,4 +35,3 @@
   <script type="module" src="scripts/app.js"></script>
 </body>
 </html>
-``
