--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="theme-color" content="#0f172a" />
   <link rel="icon" href="assets/icons/icon-192.png" sizes="192x192" />
   <link rel="apple-touch-icon" href="assets/icons/icon-192.png" />
-  <link rel="stylesheet" href="styles/styles.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="app-header">
