--- a/index.html
+++ b/index.html
@@ -3,14 +3,26 @@
 <html lang="it">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1,
+                 maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+
+  <!-- Modalità app fullscreen (iOS) -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="TrisTris">
+
+  <!-- Colore tema -->
+  <meta name="theme-color" content="#000000">
+
+  <!-- Icona -->
+  <link rel="apple-touch-icon" sizes="180x180" href="icon_tris.png">
+  
   <meta name="description" content="TrisTris" />
   <title>TrisTris</title>
 
   <link rel="manifest" href="manifest.webmanifest" />
   <meta name="theme-color" content="#0f172a" />
   <link rel="icon" href="assets/icons/icon-192.png" sizes="192x192" />
-  <link rel="apple-touch-icon" href="assets/icons/icon-192.png" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
