--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
     <small>© <span id="year"></span> TrisTris</small>
   </footer>
 
-  <script type="module" src="scripts/app.js"></script>
+  <script type="module" src="scripts/loader.js"></script>
 </body>
 </html>
