--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
     <small>© <span id="year"></span> TrisTris</small>
   </footer>
 
+  <!-- Supabase JS Client -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  
+  <!-- TensorFlow.js -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.11.0/dist/tf.min.js"></script>
+  
   <script type="module" src="scripts/app.js"></script>
 </body>
 </html>
